--- a/asyncProject.html
+++ b/asyncProject.html
@@ -1,149 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Random Users Dashboard - Async Practice</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f4f6f9;
-      margin: 0;
-      padding: 20px;
-      color: #333;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 10px;
-    }
-    button {
-      display: block;
-      margin: 20px auto;
-      padding: 14px 28px;
-      font-size: 18px;
-      background: #0069d9;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-    }
-    button:hover:not(:disabled) { background: #0053b3; }
-    button:disabled {
-      background: #888;
-      cursor: not-allowed;
-      opacity: 0.6;
-    }
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-      gap: 24px;
-    }
-    .card {
-      background: white;
-      border-radius: 16px;
-      padding: 24px;
-      text-align: center;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.1);
-      transition: transform 0.2s;
-    }
-    .card:hover {
-      transform: translateY(-8px);
-    }
-    .card img {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 5px solid #0069d9;
-    }
-    .placeholder-img {
-      background: #ddd;
-      border-color: #aaa;
-    }
-    .loading, .error {
-      grid-column: 1 / -1;
-      text-align: center;
-      font-size: 20px;
-      padding: 40px;
-    }
-    .loading { color: #666; }
-    .error { color: #d32f2f; }
-  </style>
-</head>
-<body>
-  <h1>Random People Dashboard</h1>
-  <button id="loadBtn">Load Random People</button>
-
-  <div class="container" id="usersContainer">
-    <div class="loading">Click the button to load people</div>
-  </div>
-
-  <script>
-    // DOM references
-    const container = document.getElementById('usersContainer');
-    const loadBtn = document.getElementById('loadBtn');
-
-    // Utility: Clear container and show message
-    function showMessage(html, className = '') {
-      container.innerHTML = `<div class="${className}">${html}</div>`;
-    }
-
-    // Utility: Create a user card (you'll call this after getting data)
-    function createUserCard(user) {
-      const card = document.createElement('div');
-      card.className = 'card';
-      card.innerHTML = `
-        <img src="${user.picture?.large || ''}" alt="${user.name?.first || 'User'}" 
-             onerror="this.src='https://via.placeholder.com/120?text=?'"
-             class="${!user.picture?.large ? 'placeholder-img' : ''}">
-        <h3>${user.name?.title || ''} ${user.name?.first || ''} ${user.name?.last || 'Doe'}</h3>
-        <p>Email: ${user.email || 'N/A'}</p>
-        <p>Location: ${user.location?.city || '?'}, ${user.location?.country || '?'}</p>
-        <p>Age: ${user.dob?.age || '?'} years old</p>
-      `;
-      return card;
-    }
-
-    // Your async practice starts here!
-    // Implement these functions yourself using async/await:
-
-    // 1. Fetch one random user from https://randomuser.me/api/
-    async function fetchOneUser() {
-      // Your code here
-    }
-
-    // 2. Fetch multiple users (e.g. 8) — use Promise.all() for parallel requests!
-    async function fetchMultipleUsers(count = 8) {
-      // Your code here
-    }
-
-    // 3. Main loader function
-    async function loadUsers() {
-      // Show loading state
-      showMessage('Loading amazing people...', 'loading');
-      loadBtn.disabled = true;
-
-      try {
-        // Call your function here
-        // const users = await ...
-        // Then render: users.forEach(user => container.appendChild(createUserCard(user)));
-
-      } catch (error) {
-        showMessage(`Error: ${error.message}`, 'error');
-        console.error(error);
-      } finally {
-        loadBtn.disabled = false;
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Random Users Dashboard - Async Practice</title>
+    <style>
+      body {
+        font-family: "Segoe UI", sans-serif;
+        background: #f4f6f9;
+        margin: 0;
+        padding: 20px;
+        color: #333;
       }
-    }
+      h1 {
+        text-align: center;
+        margin-bottom: 10px;
+      }
+      button {
+        display: block;
+        margin: 20px auto;
+        padding: 14px 28px;
+        font-size: 18px;
+        background: #0069d9;
+        color: white;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+      }
+      button:hover:not(:disabled) {
+        background: #0053b3;
+      }
+      button:disabled {
+        background: #888;
+        cursor: not-allowed;
+        opacity: 0.6;
+      }
+      .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+        gap: 24px;
+      }
+      .card {
+        background: white;
+        border-radius: 16px;
+        padding: 24px;
+        text-align: center;
+        box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
+        transition: transform 0.2s;
+      }
+      .card:hover {
+        transform: translateY(-8px);
+      }
+      .card img {
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;
+        object-fit: cover;
+        border: 5px solid #0069d9;
+      }
+      .placeholder-img {
+        background: #ddd;
+        border-color: #aaa;
+      }
+      .loading,
+      .error {
+        grid-column: 1 / -1;
+        text-align: center;
+        font-size: 20px;
+        padding: 40px;
+      }
+      .loading {
+        color: #666;
+      }
+      .error {
+        color: #d32f2f;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Random People Dashboard</h1>
+    <button id="loadBtn">Load Random People</button>
 
-    // Event listener
-    loadBtn.addEventListener('click', loadUsers);
+    <div class="container" id="usersContainer">
+      <div class="loading">Click the button to load people</div>
+    </div>
 
-    // Optional: Load on page load
-    // loadUsers();
-  </script>
-</body>
+    <script>
+      // DOM references
+      const container = document.getElementById("usersContainer");
+      const loadBtn = document.getElementById("loadBtn");
+
+      // Utility: Clear container and show message
+      function showMessage(html, className = "") {
+        container.innerHTML = `<div class="${className}">${html}</div>`;
+      }
+
+      // Utility: Create a user card (you'll call this after getting data)
+      function createUserCard(user) {
+        const card = document.createElement("div");
+        card.className = "card";
+        card.innerHTML = `
+          <img src="${user.picture?.large || ""}" alt="${
+          user.name?.first || "User"
+        }"
+               onerror="this.src='https://via.placeholder.com/120?text=?'"
+               class="${!user.picture?.large ? "placeholder-img" : ""}">
+          <h3>${user.name?.title || ""} ${user.name?.first || ""} ${
+          user.name?.last || "Doe"
+        }</h3>
+          <p>Email: ${user.email || "N/A"}</p>
+          <p>Location: ${user.location?.city || "?"}, ${
+          user.location?.country || "?"
+        }</p>
+          <p>Age: ${user.dob?.age || "?"} years old</p>
+        `;
+        return card;
+      }
+
+      // 1. Fetch one random user from https://randomuser.me/api/
+      async function fetchOneUser() {
+        try {
+          const response = await fetch("https://randomuser.me/api/");
+
+          if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+          }
+          const data = await response.json();
+          return data.results[0];
+        } catch (error) {
+          console.error("Failed to fetch user:", error);
+          throw error;
+        }
+      }
+
+      // 2. Fetch multiple users (e.g. 8) — use Promise.all() for parallel requests!
+      async function fetchMultipleUsers(count = 8) {
+        try {
+          const promises = Array(count)
+            .fill()
+            .map(() => fetchOneUser());
+          const users = await Promise.all(promises);
+          return users;
+        } catch (error) {
+          console.error("Failed to fetch user:", error);
+          throw error;
+        }
+      }
+
+      // 3. Main loader function
+      async function loadUsers() {
+        // Show loading state
+        showMessage("Loading amazing people...", "loading");
+        loadBtn.disabled = true;
+
+        try {
+          const users = await fetchMultipleUsers();
+          container.innerHTML = "";
+          users.forEach((user) => {
+            container.appendChild(createUserCard(user));
+          });
+        } catch (error) {
+          showMessage(`Error: ${error.message}`, "error");
+          console.error(error);
+        } finally {
+          loadBtn.disabled = false;
+        }
+      }
+
+      // Event listener
+      loadBtn.addEventListener("click", loadUsers);
+
+      // Optional: Load on page load
+      // loadUsers();
+    </script>
+  </body>
 </html>
